--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
-  "name": "webpack_typescript",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "typescript-sass",
+  "version": "2.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open --config webpack.dev.js"
+    "start": "webpack-dev-server --hot -d",
+    "build": "webpack -p"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.18",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "firebase": "^9.0.1",
-    "html-webpack-partials-plugin": "^0.8.0",
-    "typescript": "^4.3.5"
+    "sass": "^1.26.7",
+    "sass-loader": "^8.0.2",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3"
   }
 }
