--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.26.7",
     "sass-loader": "^8.0.2",
     "ts-loader": "^6.2.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "validator": "^13.6.0"
   }
 }
