--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "firebase": "^4.8.0",
     "sass": "^1.26.7",
     "sass-loader": "^8.0.2",
     "ts-loader": "^6.2.2",
