--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass-loader": "^8.0.2",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
+    "uniqid": "^5.4.0",
     "validator": "^13.6.0"
   }
 }
