--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.4.0",
     "uniqid": "^5.4.0",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0"
   }
 }
