--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase": "^4.8.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.4.0",
+    "lodash.clonedeep": "^4.5.0",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2",
     "validator": "^13.6.0"
