--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "start": "webpack serve",
     "watch": "webpack --watch",
-    "build": "NODE_ENV=production webpack",
+    "build": "webpack --mode production",
     "build-dev": "webpack"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/uniqid": "^5.3.1",
     "@types/validator": "^13.6.3",
     "babel-loader": "^8.2.2",
